KUBERNETES/frontend-k8/aws-alb/aws-ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joke-ingress
  namespace: jokes-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: www.dev-ops.solutions
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end-service
                port:
                  number: 80
          - path: /joke
            pathType: Prefix
            backend:
              service:
                name: backend-end-service
                port:
                  number: 80
